# pyxel-mogumogu-panic

./: README.md  app.pyxapp  index.html  pyproject.toml
app/: main.py  pyproject.toml
app/assets/: assets.pyxres
docs/: index.html  main.py
