[project]
name = "pyxel-test"
version = "0.1.0"
description = "pyxelでなんか作ってみる"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyxel==2.2.10",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
cache-dir = "/tmp/.cache/ruff"
exclude = ["**/versions/", "**/.venv/"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "Q"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # import violations
"*/settings/*.py" = ["E501"]  # Line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
